# tech-calendar

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  calendar.ics  pyproject.toml
.github/: dependabot.yml  tech-calendar.yaml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  main.yml  update-calendar.yml
tech_calendar/: api_keys.py  calendar.py  cli.py  config.py  constants.py  exceptions.py  file_utils.py  finnhub_client.py  logging.py  models.py  preprocessing.py  settings.py
tech_calendar/config/: __init__.py  loader.py  models.py
tech_calendar/earnings/: finnhub_client.py  models.py  preprocessing.py  runner.py
tech_calendar/events/: models.py  researcher.py  runner.py
tech_calendar/storage/: __init__.py  database.py  earnings_repository.py  events_repository.py
tech_calendar/storage/backends/: __init__.py  base.py  local_file.py  webdav.py
tests/: test_calendar.py  test_filter_events.py  test_format_revenue.py
tests/earnings/: test_filter_events.py  test_format_revenue.py
