[project]
name = "tech-calendar"
version = "0.1.0"
description = "iCalendar (.ics) with earnings dates for selected tech tickers"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.3.2",
    "finnhub-python>=2.4.24",
    "ics>=0.7.3",
    "pydantic>=2.11.7",
    "PyYAML>=6.0.2",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "webdavclient3>=3.14.7",
]

[project.urls]
Homepage = "https://github.com/eikendev/tech-calendar"

[project.scripts]
tech-calendar = "tech_calendar.cli:cli"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tech_calendar"]

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "B", "I", "SIM", "UP", "N", "FURB"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pyrefly>=0.60.2",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
